[package]
name = "decryptrstest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
anyhow = "1.0.82"
base64 = "0.22.0"
cbc = { version = "0.1.2", features = ["alloc"] }
hex = "0.4.3"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
ring = "0.17.8"
serde = "1.0.199"
serde_json = "1.0.116"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha256 = "1.5.0"
subtle = "2.5.0"
